# eff-modile-barter-test-task

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
barter_app/: admin.py  apps.py  dto.py  exceptions.py  forms.py  models.py  repositories.py  services.py  urls.py  views.py
barter_app/migrations/: 0001_initial.py  0002_ad_exchanged_alter_exchangeproposal_ad_receiver_and_more.py  0003_remove_ad_image_url_ad_image.py
barter_app/repositories/: ad.py  base.py  category.py  exchange.py
barter_app/static/barter_app/css/: ad.css  base.css  components.css  search_filters.css
barter_app/static/barter_app/js/: main.js
barter_app/templates/: base.html
barter_app/templates/barter_app/: ad_confirm_delete.html  ad_detail.html  ad_form.html  ad_list.html  exchange_proposal_detail.html  exchange_proposal_form.html  proposals.html  search_filter_form.html
barter_project/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: create_superuser_if_not_exists.py
tests/: __init__.py  conftest.py
tests/integration/: annotations.py  conftest.py  test_ad.py
tests/unit/: test_ad.py
