[tool.poetry]
name = "eff-mobile-barter"
version = "0.1.0"
description = "Barter platform project"
authors = ["timofeybaev1988@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
django = "5.2"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
